Splitting Date DB

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         </activity>
 
         <activity
-            android:name=".BabiesActivity"
+            android:name=".RoomActivity"
             android:launchMode="singleTask"
             android:theme="@style/AppTheme.NoActionBar"
             android:configChanges="orientation|screenSize"
