--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
 
         <activity
             android:name=".register.UpdateKidActivity"
+            android:configChanges="orientation|screenSize"
             android:launchMode="singleTop">
         </activity>
 
