--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,12 +18,16 @@ android {
     }
 }
 
+ext {
+    SdkVersion = '27.1.1'
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation "com.android.support:appcompat-v7:$SdkVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation "com.android.support:design:$SdkVersion"
+    implementation "com.android.support:cardview-v7:$SdkVersion"
     implementation 'org.apache.commons:commons-lang3:3.7'
     implementation 'com.vicmikhailau:MaskedEditText:2.0.3'
     implementation 'com.google.firebase:firebase-core:16.0.1'
