--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,18 +27,20 @@ ext {
     butterknifeVersion = '8.8.1'
     roomVersion = '1.1.1'
     archLifecycleVersion = '1.1.1'
+    firebaseVersion = '16.0.1'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$SdkVersion"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation "com.android.support:design:$SdkVersion"
     implementation "com.android.support:cardview-v7:$SdkVersion"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'org.apache.commons:commons-lang3:3.7'
+    implementation 'joda-time:joda-time:2.10'
     implementation 'com.vicmikhailau:MaskedEditText:2.0.3'
-    implementation 'com.google.firebase:firebase-core:16.0.1'
-    implementation 'com.google.firebase:firebase-database:16.0.1'
+    implementation "com.google.firebase:firebase-core:$firebaseVersion"
+    implementation "com.google.firebase:firebase-database:$firebaseVersion"
     implementation 'com.firebaseui:firebase-ui-database:2.1.0'
     implementation "com.jakewharton:butterknife:$butterknifeVersion"
     implementation "android.arch.persistence.room:runtime:$roomVersion"
